tests/paczka1/fuzzy1/88518639.err
Error in line 3: cAlvqYtxw A463 6,7
Error in line 10: i3v A703 96,10
Error in line 1: ec7zp9v A520 0,4
Error in line 14: ec7zp9v A463 185,29
Error in line 20: cAlvqYtxw A463 42,0
Error in line 9: i3v A703 34,3
Error in line 11: ec7zp9v A463 57,2
Error in line 30: ec7zp9v S853 55,9
